fixed math 30 bold, overflow table

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -58,3 +58,8 @@ strong {
   width: 50%;
   float: left;
 }
+
+#exam-schedule-div {
+  display: block;
+  overflow-x: auto;
+}
